# libfacedetection

example/: detect-image.cpp
opencv_dnn/cpp/: CMakeLists.txt  detect.cpp
